--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -10,6 +10,8 @@ sites:
     url: https://myles.wiki
   - name: mylesbraithwaite.com
     url: https://mylesbraithwaite.com
+  - name: trex.studio
+    url: https://trex.studio
 
 assignees:
   - myles
