--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -26,3 +26,12 @@ status-website:
   cname: status.mylesbraithwaite.net
   name: Myles' Uptime
   introTitle: "Myles Braithwaite's uptime monitor and status page."
+
+workflowSchedule:
+  graphs: "0 0 * * *"
+  responseTime: "0 23 * * *"
+  staticSite: "0 1 * * *"
+  summary: "0 0 * * *"
+  updateTemplate: "0 0 * * *"
+  updates: "0 3 * * *"
+  uptime: "*/15 * * * *"
